--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "app/josso-php-inc"
         ],
         "psr-4": {
             "App\\": "app/"
